# plexos2duckdb

./: .gitignore  .justfile  Cargo.toml  LICENSE  NOTICE.md  README.md  build.rs  pyproject.toml
.config/: mise.toml
.config/mise/tasks/plexos2duckdb/: ensure-rust-toolchain  release-via-fork
.github/workflows/: cd.yml
python/plexos2duckdb/: __init__.py  api.py
src/: cli.rs  deflate_index.rs  lib.rs  main.rs  utils.rs
tests/: test_convert_e2e.rs  test_database.py
