[package]
name = "plexos2duckdb"
version = "0.1.0-beta.9"
edition = "2024"
build = "build.rs"
description = "A tool to convert PLEXOS Solution files to a DuckDB database."
license = "BSD-3-Clause"
repository = "https://github.com/epri-dev/plexos2duckdb"
homepage = "https://github.com/epri-dev/plexos2duckdb"
documentation = "https://github.com/epri-dev/plexos2duckdb"
readme = "README.md"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
console = "0.16.2"
ctrlc = "3.5.2"
dateparser = "0.3.1"
duckdb = { version = "1.4.4", features = ["bundled", "chrono"] }
indexmap = "2.13.0"
indicatif = "0.18.4"
itertools = "0.14.0"
lazy_static = "1.5.0"
owo-colors = "4.3.0"
regex = "1.12.3"
roxmltree = "0.21.1"
tempfile = "3.26.0"
zip = "8.5.1"
tabled = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap_complete = "4.5.60"

[profile.release]
debug = "full"
strip = "none"

[[bin]]
name = "plexos2duckdb"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
